s/password-reset/password_reset

--- a/vcweb/core/templates/account/register.html
+++ b/vcweb/core/templates/account/register.html
@@ -4,7 +4,7 @@
 {% block form %}
 <h3>New User</h3>
 <p>
-Already have an account?  You can <a href='{% url "core:login" %}'>login here</a> or <a href='{% url "password-reset" %}'>retrieve your password</a>.
+Already have an account?  You can <a href='{% url "core:login" %}'>login here</a> or <a href='{% url "password_reset" %}'>retrieve your password</a>.
 </p>
 {% include "includes/bootstrap-form.html" %}
 <div class='form-actions'>
