--- a/vcweb/core/templates/account/login.html
+++ b/vcweb/core/templates/account/login.html
@@ -8,7 +8,7 @@
     <p>
     Don&#39;t have an account or a first-time user?  Please <a href='{% url "core:register" %}'>register first</a>.
     <br>
-    If you've forgotten your password, you can <a href='{% url "password-reset" %}'>request a new one</a>.
+    If you've forgotten your password, you can <a href='{% url "password_reset" %}'>request a new one</a>.
     </p>
     {% include "includes/bootstrap-form.html" %}
     <div class='controls'>
