--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -224,3 +224,28 @@ col.error {
 .callout-info h3 {
     color: #3a87ad;
 }
+
+.cas-login {
+    margin-top: 60px;
+}
+
+#login_submit a.submit {
+	background: transparent url(../images/ASU/signin_bttn.png) 0 0 no-repeat;
+	border: none;
+    display: block;
+    height: 33px;
+	color: #903;
+	cursor: pointer;
+	font-size: 14px;
+	font-weight: bold;
+	height: 34px;
+	line-height: 34px;
+	padding: 0 15px;
+	width: 78px;
+}
+
+#login_submit a.submit:hover {
+	color: #fff;
+	background-position: 0 -35px;
+    text-decoration: none;
+}
