--- a/vcweb/subject_pool/templates/subject-pool/experimenter-index.html
+++ b/vcweb/subject_pool/templates/subject-pool/experimenter-index.html
@@ -105,22 +105,12 @@ Experiment Session Management
                                             <i class="icon-calendar"></i>
                                         </span>
                                     </span>
-                                    <select  class="input-mini" name="start_hour" data-bind ="foreach: new Array(24),value : startHour, enable: editable">
-                                        <!-- ko if: $index() < 10 -->
-                                            <option data-bind="value: $index(), text: '0'+$index() "></option>
-                                        <!-- /ko -->
-                                        <!-- ko if: $index() >= 10 -->
-                                            <option data-bind="value: $index(), text: $index() "></option>
-                                        <!-- /ko -->
+                                    <select  class="input-mini" name="start_hour" data-bind ="foreach: $root.allHours,value : startHour, enable: editable">
+                                        <option data-bind="value: $data, text: $data "></option>
                                     </select>
-                                    <select class="input-mini" name="start_min" data-bind ="foreach: new Array(4),value : startMin, enable: editable">
-                                        <!-- ko if: $index() < 1 -->
-                                            <option data-bind="value: 0, text: '00' "></option>
-                                        <!-- /ko -->
-                                        <!-- ko if: $index() >=1 -->
-                                            <option data-bind="value: $index() * 15, text: $index() * 15"></option>
-                                        <!-- /ko -->
-                                    </select>
+                                    <select class="input-mini" name="start_min" data-bind ="foreach: $root.allMinutes,value : startMin, enable: editable">
+                                        <option data-bind="value: $data, text: $data"></option>
+                                     </select>
                                 </td>
                                 <td>
                                     <span class=" label label-info session-label">Capacity:</span>
@@ -130,21 +120,16 @@ Experiment Session Management
                                 </td>
                                 <td data-bind="if: active" rowspan="2">
                                     <div class="btn-group" data-bind = "visible: editable">
-                                        <a class="btn" data-bind="attr: {href: 'session/detail/event/'+ pk()}">
-                                            <i class="icon-eye-open"></i>
-                                            view
-                                        </a>
                                         <button type="submit" class="btn btn-success">
                                             <i class="icon-save"></i>
                                             save
                                         </button>
                                         <button class="btn btn-danger" data-bind="click: $root.removeSession">
                                             <i class="icon-trash"></i>
-                                            remove
                                         </button>
                                     </div>
                                     <div class="btn-group" data-bind = "visible: !editable()">
-                                         <a class="btn" data-bind="attr: {href: 'session/detail/event/'+ pk()} ">
+                                        <a class="btn" data-bind="attr: {href: 'session/detail/event/'+ pk()} ">
                                             <i class="icon-eye-open"></i>
                                             view
                                         </a>
@@ -154,7 +139,6 @@ Experiment Session Management
                                         </button>
                                         <button class="btn btn-danger" data-bind="click: $root.removeSession">
                                             <i class="icon-trash"></i>
-                                            remove
                                         </button>
                                     </div>
                                 </td>
@@ -171,7 +155,7 @@ Experiment Session Management
                             </tr>
                             <tr>
                                 <td>
-                                    <input type="text" name="location" placeholder="Enter Location" data-bind='value: location, enable: editable' />
+                                    <input type="text" name="location" placeholder="Location(e.g., online, campus building)" data-bind='value: location, enable: editable' />
                                 </td>
                                 <td>
                                     <span class="label label-info session-label">End Date/Time: </span>
@@ -183,21 +167,11 @@ Experiment Session Management
                                             <i class="icon-calendar"></i>
                                         </span>
                                     </span>
-                                    <select  class="input-mini" name="end_hour" data-bind ="foreach: new Array(24),value : endHour, enable: editable">
-                                        <!-- ko if: $index() < 10 -->
-                                            <option data-bind="value: $index(), text: '0'+$index() "></option>
-                                        <!-- /ko -->
-                                        <!-- ko if: $index() >= 10 -->
-                                            <option data-bind="value: $index(), text: $index() "></option>
-                                        <!-- /ko -->
+                                    <select  class="input-mini" name="end_hour" data-bind ="foreach: $root.allHours ,value : endHour, enable: editable">
+                                        <option data-bind="value: $data, text: $data "></option>
                                     </select>
-                                    <select class="input-mini" name="end_min" data-bind ="foreach: new Array(4),value : endMin, enable: editable">
-                                        <!-- ko if: $index() < 1 -->
-                                            <option data-bind="value: 0, text: '00' "></option>
-                                        <!-- /ko -->
-                                        <!-- ko if: $index() >=1 -->
-                                            <option data-bind="value: $index() * 15, text: $index() * 15"></option>
-                                        <!-- /ko -->
+                                    <select class="input-mini" name="end_min" data-bind ="foreach: $root.allMinutes ,value : endMin, enable: editable">
+                                        <option data-bind="value: $data, text: $data"></option>
                                     </select>
                                 </td>
                                 <td>
@@ -284,7 +258,7 @@ Experiment Session Management
                     if(start_date > end_date){
                         alert("ERROR: End date cannot be earlier than the Start date. Please choose a later end date.");
                         return;
-                    } else if(+start_date == +end_date && start_time > end_time) {
+                    } else if(+start_date == +end_date && start_time >= end_time) {
                         alert("ERROR: Scheduled End Time cannot be earlier than the Start Time. Please choose a later end Time.");
                         return;
                     }
@@ -321,6 +295,9 @@ Experiment Session Management
                     }
                 };
                 var model = ko.mapping.fromJS(sessions_experiment_metadatas_object, session_mapping);
+
+                model.allHours = ['00', '01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23'];
+                model.allMinutes = ['00', '15', '30', '45']
 
                 model.inviteCount = ko.observable(0);
                 model.invite_experiment_metadata_pk_list = -1;
@@ -376,7 +353,7 @@ Experiment Session Management
 
                 model.addSession = function() {
                     model.session_list.push(
-                        new SessionModel({ pk: -1, experiment_metadata: {pk: -1}, startDate: "", endDate: "", capacity:10, invite_count: 0, location: "Online"}, { newSession: true})
+                        new SessionModel({ pk: -1, experiment_metadata: {pk: -1}, startDate: "", endDate: "", capacity:10, invite_count: 0, location: ""}, { newSession: true})
                     );
                 };
 
@@ -436,7 +413,7 @@ Experiment Session Management
                 //initialize datepicker with some optional options
                     var options = {
                         format: 'yyyy-mm-dd',
-                        startDate: '-d'
+                        startDate: new Date('12/17/2013')
                     };
                     $(element).datepicker(options);
 
@@ -455,6 +432,7 @@ Experiment Session Management
                         widget.date = new Date(ko.utils.unwrapObservable(valueAccessor()));
                         widget.setValue();
                     }
+                    $('.datepicker').hide();
                 }
             };
 
